random circles deactivated for now, placeholder polygons removed

--- a/content/meshy.html
+++ b/content/meshy.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Meshy</title>
-        <link rel="stylesheet" href="/files/show/meshy.css"/>
+        <link rel="stylesheet" href="meshy.css"/>
     </head>
     <body>
         <div class="wrapper">
@@ -21,10 +21,7 @@
             </div>
         </div>
         <!-- contain:meet cover:slice -->
-        <svg id="bg" viewBox="0 0 1000 1000" preserveAspectRatio="xMidYMid slice">
-            <polygon points="200,10 980,970 160,210" class="tri" style="fill:lime" />
-            <polygon points="200,10 50,30 160,210" class="tri" style="fill:blue" />
-        </svg>
-        <script src="/files/show/meshy.js"></script>
+        <svg id="bg" viewBox="0 0 1000 1000" preserveAspectRatio="xMidYMid slice"/>
+        <script src="meshy.js"></script>
     </body>
 </html>
