new editor finished

--- a/content/editor.html
+++ b/content/editor.html
@@ -24,5 +24,6 @@
         <!-- contain:meet cover:slice -->
         <svg id="bg" viewBox="0 0 1000 1000" preserveAspectRatio="xMidYMid slice"/>
         <script src="/files/show/index.js"></script>
+        <script src="/files/show/editor.js"></script>
     </body>
 </html>
